--- a/views/about-page.html
+++ b/views/about-page.html
@@ -16,11 +16,16 @@
 </head>
 
 <body>
+    <audio autoplay loop controls>
+        <source src="/Anthem.mp3" type="audio/mpeg">
+    </audio>
     <nav class="navBar">
         <a href="/views/home-page.html" class="navLinks">HOME</a>
         <a href="/views/works-page.html" class="navLinks">MY WORK</a>
         <a href="/views/photo-gallery-page.html" class="navLinks">GALLERY</a>
     </nav>
+    
+    <h1>Let's talk about my favourite subject... me</h1>
 
     <div id="camerasAbout" class="aboutContainer">
         <div><img src="/images/cameras.jpg" alt="Sexy me." class="aboutImages"></div>
