--- a/views/home-page.html
+++ b/views/home-page.html
@@ -10,11 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Inter:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 
 <body>
+    <audio autoplay loop controls>
+        <source src="/Anthem.mp3" type="audio/mpeg">
+    </audio>
     <nav class="navBar">
         <a href="/views/about-page.html" class="navLinks">ABOUT ME</a>
         <a href="/views/works-page.html" class="navLinks">MY WORK</a>
@@ -25,9 +30,11 @@
     <div id="typedContainer">
         <img src="/images/full-body-edited.png" alt="Full-body photo of me.">
         <p id="typed">Dear Americans, <br>
-            Welcome to my page, where I can get a little bit closer<br> to you by contr...  by sharing all of our ideas! <br>
+            Welcome to my page, where I can get a little bit closer<br>
+            to you by contr... by sharing all of our ideas!
+            <br>
             Do have fun, or else I will burn you to death - ha, ha - jk! <br>
-            Love, 
+            Love,
             Homie x
         </p>
     </div>
