--- a/views/photo-gallery-page.html
+++ b/views/photo-gallery-page.html
@@ -10,17 +10,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Inter:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600&display=swap" rel="stylesheet">
     <title>Photo Gallery</title>
 </head>
 
 <body>
+    <audio autoplay loop controls>
+        <source src="/Anthem.mp3" type="audio/mpeg">
+    </audio>
     <nav class="navBar">
         <a href="/views/home-page.html" class="navLinks">HOME</a>
         <a href="/views/about-page.html" class="navLinks">ABOUT ME</a>
         <a href="/views/works-page.html" class="navLinks">MY WORK</a>
     </nav>
     
+    <h1>How can I be so f**ing perfect?</h1>
     <div id="worksImages" class="worksContainer">
         <p class="textAbout">Look at all the good work I have done and continue to do every damn day for all you f**king c**suckers. You guys are the real heroes, we are just glad we can help. <br>
         Enjoy a display of how incredibly handsome, ridiculously generous and unbelievably perfect I am.</p>
