--- a/views/works-page.html
+++ b/views/works-page.html
@@ -15,17 +15,25 @@
 </head>
 
 <body>
+    <audio autoplay loop controls>
+        <source src="/Anthem.mp3" type="audio/mpeg">
+    </audio>
     <nav class="navBar">
         <a href="/views/home-page.html" class="navLinks">HOME</a>
         <a href="/views/about-page.html" class="navLinks">ABOUT ME</a>
         <a href="/views/photo-gallery-page.html" class="navLinks">GALLERY</a>
     </nav>
 
+    <h1>Dear diary, I am perfect</h1>
     <div id="worksPage">
         <p class="textAbout"><em>With the face of a movie star and the power of a god, Homelander is the greatest superhero alive and the leader of The Seven. Not only can he fly, but he also has super strength and super hearing, and he can see through almost anything with his x-ray vision and then destroy it with his laser eyes.
 <br>
         On the surface, he's affable, modest, and sincere; the ultimate Boy Scout, an American treasure, a God-fearing patriot.</em> <br>
         Okay that's pretty much it. I took some random fan's words from this <a id="link" href="https://the-boys.fandom.com/wiki/Homelander/Comics#:~:text=With%20the%20face%20of%20a,it%20with%20his%20laser%20eyes.">website </a>as I could not have described myself better (well, we all know I could, I just couldn't be bothered).
+        <br>
+        I honestly don't see any reason as to why I should waste my precious time explaining to you what I do as you should already know - and if you don't, you will pay for it. <br>
+        Anyway, follow me on <a id="link" href="https://www.instagram.com/h.o.m.e.l.a.n.d.e.r/?hl=en">Instagram</a> if you don't already, or else. Erm, I mean, or I will be super sad and you don't want me to be sad, do you?
+
     </p>
     </div>
 
